--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
       "env": {
         "NODE_ENV": "production"
       },
-      "command": "npm install --legacy-peer-deps && npm run build"
+      "buildCommand": "npm install --legacy-peer-deps && npm run build"
     }
   }
   
