--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-parallax-tilt": "^1.7.249",
     "react-router-dom": "^6.8.1",
     "react-vertical-timeline-component": "^3.6.0",
-    "three": "^0.169.0"
+    "three": "^0.169.0",
+    "three-mesh-bvh": "^0.8.2",
+    "three-stdlib": "^2.33.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
