--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/fiber": "^8.11.1",
     "caniuse-lite": "^1.0.30001674",
     "framer-motion": "^9.0.7",
+    "lodash": "^4.17.21",
     "maath": "^0.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
