--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.3.1",
     "react-parallax-tilt": "^1.7.249",
     "react-router-dom": "^6.8.1",
+    "react-toastify": "^10.0.6",
     "react-vertical-timeline-component": "^3.6.0",
     "three": "^0.169.0",
     "three-mesh-bvh": "^0.8.2",
